Add NR1 assignment and enhanced-for cases to AssignmentNR1S test