@@ -1,19 +1,22 @@
 /*
  * @test /nodynamiccopyright/
  * @summary
- * @enablePreview
- * @compile AssignmentNR1S.java
- * @run main AssignmentNR1S
+ * @compile/fail/ref=AssignmentNR1S.out -XDrawDiagnostics AssignmentNR1S.java
+ * @compile --enable-preview --source ${jdk.version} AssignmentNR1S.java
+ * @run main/othervm --enable-preview AssignmentNR1S
  */
 import java.util.Objects;
+import java.util.List;
 
 public class AssignmentNR1S {
     public static void main(String[] args) {
         method0();
         method1();
         method2();
+        method3();
         method4();
         method5();
+        method6();
     }
 
     static sealed abstract class SA1 permits SB1 {}
@@ -31,23 +34,36 @@ public class AssignmentNR1S {
         SA1 sa = new SB1();
         return sa;   // ok
     }
-//    <T extends SA1> void method3(T t) { // TODO
-//        SB1 sb = t;  // ok
-//    }
 
     static sealed abstract class SA2<T> permits SB2 {}
     static final class SB2<T> extends SA2<T> {}
-    static <T> void method4() {
+    static <T> void method3() {
         SA2<T> sa = new SB2<>();  // WRC, OK
         SB2<T> sb = sa;
     }
 
     static record R1(int x) implements IR {}
     static sealed interface IR {}
-    static void method5() {
+    static void method4() {
         IR ir = new R1(42);
-        R1(int x) = ir;         // OK
         R1 r1 = ir;             // OK
+    }
+
+    static sealed interface IFoo permits FooImpl {}
+    static final class FooImpl implements IFoo {}
+    static void method5() {
+        IFoo f = new FooImpl();
+        FooImpl fi = new FooImpl();
+        fi = f;      // OK
+    }
+
+    static void method6() {
+        List<IFoo> fs = List.of(new FooImpl(), new FooImpl());
+        int count = 0;
+        for (FooImpl fi : fs) {
+            count++;
+        }
+        assertEquals(2, count);
     }
 
     static void assertEquals(Object expected, Object actual) {
@@ -57,4 +73,3 @@ public class AssignmentNR1S {
         }
     }
 }
-
